added ``ootest`` to the list of executables

--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,5 +1,4 @@
-
-EXECUTABLES = exwikipedia rltest rlversion histexamp rl
+EXECUTABLES = exwikipedia rltest rlversion histexamp rl ootest
 FPC_OPTS = -Fu..
 
 
